--- a/.gitignore
+++ b/.gitignore
@@ -62,3 +62,5 @@ crashlytics-build.properties
 remove_default_android_permission/Library/
 
 .DS_Store
+
+remove_default_android_permission/Logs/Packages-Update.log
